@@ -702,6 +702,12 @@ class SizeofTest(unittest.TestCase):
         check(get_cell().__closure__[0], size(h + 'P'))
         # code
         check(get_cell().__code__, size(h + '5i9Pi3P'))
+        check(get_cell.__code__, size(h + '5i9Pi3P'))
+        def get_cell2(x):
+            def inner():
+                return x
+            return inner
+        check(get_cell2.__code__, size(h + '5i9Pi3P') + 1)
         # complex
         check(complex(0,1), size(h + '2d'))
         # method_descriptor (descriptor object)
